# trajectoire-pyro

./: .dockerignore  .gitignore  Dockerfile  README.md  debug_import.py  docker-compose.yml  dummy.txt  generate_random.py  generate_random_numbers.py  main.py  owner.py  pyproject.toml  run_tests.py  synthetic_careers.csv  synthetic_test.csv  test_output.csv
coding/config/generator/parameters/: parameters_4state.yaml
docs/: SPECS.md
src/trajectoire_pyro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/trajpyro/: smoke.py
src/trajpyro/agents/: clients.py  developer_team.py  experimenter.py  owner-old.py  owner.py  test.py  tools.py  utils.py
src/trajpyro/agents/prompts/: coder.md  manager.md  owner.md  tester.md
src/trajpyro/generator/: __init__.py  __main__.py  config_validator.py  generator.py
tests/: test_generator.py
