[project]
name = "trajectoire-pyro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.2",
    "autogen-ext[open-ai,openai]>=0.6.2",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "pygithub>=2.6.1",
    "pyro-ppl>=1.9.1",
    "torch>=2.7.1",
]
